<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_v10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_v30"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_v70"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_v90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_h10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_h70"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_h90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/MainActivity_register"
        android:textColor="@color/red_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v70"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v30" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/MainActivity_login"
        app:layout_constraintBottom_toTopOf="@id/main_tv_register"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v70"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v30"
        app:strokeColor="@color/red_700" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_tv_forgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="end"
        android:minHeight="48dp"
        android:text="@string/MainActivity_forgotPassword"
        android:textColor="@color/red_700"
        app:layout_constraintBottom_toTopOf="@+id/main_bt_login"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v90"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v30" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/MainActivity_email"
        android:textColorHint="@color/red_700"
        app:boxStrokeColor="@color/red_700"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red_700"
        app:layout_constraintBottom_toTopOf="@id/main_til_password"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v90"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v10"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tie_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/red_700"
            android:nextFocusDown="@id/main_tie_password"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/MainActivity_password"
        android:textColorHint="@color/red_700"
        app:boxStrokeColor="@color/red_700"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/red_700"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/main_tv_forgotPassword"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v90"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tie_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/red_700"
            android:nextFocusDown="@id/main_bt_login"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/MainActivity_welcome"
        android:textColor="@color/red_700"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/main_til_user"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v90"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v10" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_iv_appicon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/appicon_foreground"
        app:layout_constraintBottom_toTopOf="@+id/main_tv_welcome"
        app:layout_constraintEnd_toStartOf="@id/main_guideline_v90"
        app:layout_constraintStart_toEndOf="@id/main_guideline_v10"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>